--- a/_config.yml
+++ b/_config.yml
@@ -155,6 +155,9 @@ plugins:
 feed:
   posts_limit: 20
   excerpt_only: false
+  path: feed.xml
+  collections:
+    - books
 
 # SEO and metadata
 lang: en-US
