Change "technical programming books" to "technical books".

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Project Q Publishing - Jekyll Configuration
-# Technical programming books for developers and engineers
+# Technical books for developers and engineers
 
 # Site settings
 domain: projectqpub.com
@@ -7,10 +7,10 @@ url: https://projectqpub.com
 baseurl: ""
 
 title: Project Q Publishing
-tagline: "Quality Technical Programming Books"
+tagline: "Quality Technical Books"
 email: contact@projectqpub.com
 description: >-
-  Quality technical programming books for developers and engineers.
+  Quality technical books for developers and engineers.
 
 # Extended metadata
 keywords: "programming books, technical books, software development, programming languages, coding, developers, engineers, technology"
@@ -24,7 +24,7 @@ company:
 author:
   name: Project Q Publishing
   email: contact@projectqpub.com
-  bio: "Dedicated to creating exceptional technical programming books that serve the needs of today's developers and engineers."
+  bio: "Dedicated to creating exceptional technical books that serve the needs of today's developers and engineers."
 
 # Social media and professional links
 social_links:
@@ -62,10 +62,10 @@ navigation:
     description: "Learn about our mission and publishing philosophy"
   - title: Books
     url: /books
-    description: "Browse our catalog of technical programming books"
+    description: "Browse our catalog of technical books"
   - title: Submissions
     url: /submissions
-    description: "Submit your technical programming manuscript"
+    description: "Submit your technical manuscript"
   - title: Contact
     url: /contact
     description: "Get in touch for inquiries and support"
@@ -92,7 +92,7 @@ collections:
   books:
     output: true
     permalink: /books/:name
-    description: "Technical programming books published by Project Q Publishing"
+    description: "Technical books published by Project Q Publishing"
     sort_by: publication_date
     sort_order: desc
   authors:
@@ -174,8 +174,8 @@ image: /assets/images/social-card.png
 seo:
   type: Organization
   name: "Project Q Publishing"
-  headline: "Quality Technical Programming Books"
-  description: "Specializing in comprehensive, practical programming resources for developers and engineers"
+  headline: "Quality Technical Books"
+  description: "Specializing in comprehensive, practical technical resources for developers and engineers"
   url: "https://projectqpub.com"
   logo: "/assets/images/logo.png"
   social_image: "/assets/images/social-card.png"
