Streamline form thank you page.

--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ twitter:
 contact:
   email: info@projectqpub.com
   business_hours: "Monday-Friday, 9 AM - 5 PM GMT"
-  response_time: "We typically respond within 24 hours"
+  response_time: "48 hours"
   submissions: "We welcome manuscript submissions from experienced developers"
 
 # Navigation structure
