Add Write page for author recruitment.
- Create write.md with author benefits and submission process
- Add Write to navigation menu in _config.yml
- Add page-specific styling in _brand-integration.scss
- Include clear CTAs linking to contact page

--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,9 @@ navigation:
   - title: Books
     url: /books
     description: "Browse our catalog of technical books"
+  - title: Write
+    url: /write
+    description: "Join our team of technical authors"
   - title: Submissions
     url: /submissions
     description: "Submit your technical manuscript"
