--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ social_links:
   linkedin: https://linkedin.com/company/project-q-publishing
   github: https://github.com/Project-Q-Publishing
   instagram: https://instagram.com/projectqpub
-  bluesky: https://bsky.app/profile/projectqpub.bsky.social
+  bluesky: https://bsky.app/profile/projectqpub.com
 
 # Social media usernames for SEO
 social:
@@ -40,7 +40,7 @@ social:
     - https://linkedin.com/company/project-q-publishing
     - https://github.com/Project-Q-Publishing
     - https://instagram.com/projectqpub
-    - https://bsky.app/profile/projectqpub.bsky.social
+    - https://bsky.app/profile/projectqpub.com
 
 # Contact information
 contact:
